Added entity and sqlite, tested, works.

--- a/Media.Player/Views/Media/Index.cshtml
+++ b/Media.Player/Views/Media/Index.cshtml
@@ -6,9 +6,10 @@
     <div class="media-player center-block">
         <div>
             <video id="MediaPlayer">
-                <source src="">
                 Your browser does not support HTML5 video.
             </video>
+
+            @ViewBag.SongTitle
         </div>
     </div>
 </div>
