--- a/Media.Player/Views/Media/Index.cshtml
+++ b/Media.Player/Views/Media/Index.cshtml
@@ -9,7 +9,7 @@
                 Your browser does not support HTML5 video.
             </video>
 
-            @ViewBag.SongTitle
+            @ViewBag.MediaMetadata.Title
         </div>
     </div>
 </div>
