--- a/Media.Player/Views/Shared/_Layout.cshtml
+++ b/Media.Player/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
 </head>
 <body>
-    <div id="main" class="container-fluid">
+    <div id="main" class="container-fluid media-content">
         @RenderBody()
     </div>
 
