--- a/Media.Player/wwwroot/css/site.css
+++ b/Media.Player/wwwroot/css/site.css
@@ -1,8 +1,4 @@
-﻿.media-header, .media-content, .media-footer {
-    width: 100%;
-}
-
-.media-options {
+﻿.media-options {
     margin: 5px 5px;
     height: 40px;
     width: 40px;
@@ -26,13 +22,16 @@
 .media-content {
     background-image: url(../images/feathers-mobile.jpg);
     height: 100%;
+    height: -moz-available; /* WebKit-based browsers will ignore this. */
+    height: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
+    height: fill-available;
 }
 
 .media-housing {
     transform: translateY(50%)
 }
 
-#MediaPlayer {
+.media-player {
     background-color: #DDD;
     width: 100%;
     margin: 0 auto;
@@ -40,33 +39,84 @@
     max-width: 1080px;
 }
 
-.media-footer {
-    bottom: 0;
-    height: 20%;
-    background-color: #000;
-    opacity: 0.7;
-}
-
-.control-housing {
-    margin-top: 20px;
+.media-player > div > video {
+    width: 100%;
 }
 
 .media-buttons {
     padding: 3px;
 }
 
-.media-buttons > button {
+.media-buttons > div > button {
     background-color: #E4DBD0;
-    border-color: #593142;
+    border: 2px solid #593142;
     height: 30px;
     border-radius: 15px;
+}
+
+.scroll-left {
+    height: 50px;
+    overflow: hidden;
+    position: relative;
+    background: yellow;
+    color: orange;
+    border: 1px solid orange;
+}
+
+.scroll-left p {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    line-height: 50px;
+    text-align: center;
+    /* Starting position */
+    -moz-transform: translateX(100%);
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+    /* Apply animation to this element */
+    -moz-animation: scroll-left 15s linear infinite;
+    -webkit-animation: scroll-left 15s linear infinite;
+    animation: scroll-left 15s linear infinite;
+}
+/* Move it (define the animation) */
+@-moz-keyframes scroll-left {
+    0% {
+        -moz-transform: translateX(100%);
+    }
+
+    100% {
+        -moz-transform: translateX(-100%);
+    }
+}
+
+@-webkit-keyframes scroll-left {
+    0% {
+        -webkit-transform: translateX(100%);
+    }
+
+    100% {
+        -webkit-transform: translateX(-100%);
+    }
+}
+
+@keyframes scroll-left {
+    0% {
+        -moz-transform: translateX(100%); /* Browser bug fix */
+        -webkit-transform: translateX(100%); /* Browser bug fix */
+        transform: translateX(100%);
+    }
+
+    100% {
+        -moz-transform: translateX(-100%); /* Browser bug fix */
+        -webkit-transform: translateX(-100%); /* Browser bug fix */
+        transform: translateX(-100%);
+    }
 }
 
 @media (min-width: 768px) {
     .media-content {
         background-image: url(../images/feathers.jpg);
     }
-    .media-housing {
-        transform: translateY(20%)
-    }
 }
+
