--- a/Media.Player/Views/Media/Index.cshtml
+++ b/Media.Player/Views/Media/Index.cshtml
@@ -32,7 +32,7 @@
 </div>
 
 <div id="mediaPlayerControls" class="footer navbar-fixed-bottom" style="background-color:rgba(0, 0, 0, 0.5); padding:2% 0;">
-    <div class="center-block" style="width:138px;">
+    <div class="center-block text-center">
         <div class="media-buttons">
             <div>
                 <button class="glyphicon" v-bind:class="isPlaying ? 'glyphicon-pause' : 'glyphicon-play'" title="play" value="play" v-on:click.prevent="playPause"></button>
